@@ -1,3 +1,7 @@
+COMET 1.15.1 - 2018-12-24
+-------------------------
+- Update script to snp_ensembL
+
 COMET 1.11.5 - 2018-04-11
 -------------------------
 - Update vignettes
